OpenRobertaServer/staticResources/css/roberta.css
/* ... */
/*CSS FOR MULTIPLE SIMULATION POPUP*/
#simModal .fixed-table-header {
    background-color: #B3BFB8;
}

/* distance between steps in mbed/sensebox download modal: */

td[lkey="Blockly.Msg.POPUP_DOWNLOAD_STEP_A_SENSEBOX"] {
    padding-bottom: 2.5em;
}

.btn.sourceEditor {
    margin-right: 0;
}

#flaskEditor {
    height: 100%; /*fix for FF calc thing*/
}

#sourceCodeEditor pre {
    position: absolute;
    top: 0px;
    padding: 0px;
    line-height: 18px;
    background-color: transparent;
    border: 0px solid #ccc;
    border-radius: 0px;
    color: #000;
    font-family: 'Roboto', sans-serif;
}

#sourceCodeEditor .codeflask {
    height: calc(100% - 80px);
    height: -moz-calc(100% - 80px);
    height: -webkit-calc(100% - 80px);
    position: relative;
}

#sourceCodeEditor textarea {
    position: absolute;
    top: 0px;
    line-height: 18px;
    font-size: 13px;
    padding: 0px;
}

#codeDiv pre {
    position: absolute;
    background-color: transparent;
    border: 0px solid #ccc;
    border-radius: 0px;
    color: #000;
    font-family: 'Roboto', sans-serif;
    background-image: linear-gradient(transparent 50%, rgba(247, 247, 247, 1) 0%);
    background-size: 100% 2.77em;
    background-repeat: repeat;
    width: 100%;
    margin-top: 0px;
    line-height: 18px;
    padding: 0px;
}

#sourceCodeEditor .codeflask__flatten {
    padding-top: 0px !important;
    line-height: 18px;
}

#codeDiv textarea {
    position: absolute;
    z-index: 8;
    color: rgba(255, 255, 255, 0) !important;
    height: calc(100% - 82px);
    margin-top: 0px;
    line-height: 18px;
    padding: 0px;
}

#codeDiv .codeflask__flatten {
    background-color: #FFF0;
    padding-top: 0px !important;
    line-height: 18px;
}

#codeDiv .codeflask__lines {
    background-color: #EEE;
    z-index: 5 !important;
}

.codeflask__lines {
    background-color: #EEE;
    padding-top: 0px !important;
    z-index: 5 !important;
}

.codeflask__lines__line {
    color: #333;
    line-height: 18px !important;
}

.codeflask--has-line-numbers::before {
    z-index: 4 !important;
}

pre code {
    white-space: inherit;
}

#confirm, #confirmCancel {
    text-transform: capitalize;
}

.blinking {
    animation: blinkingBackground 1.2s infinite;
}

.blinking > span {
    animation: blinkingForeground 1.2s infinite;
}

@keyframes blinkingBackground {
    0% {
        background-color: #E2001A;
        border-bottom: 4px solid #E2001A;
    }
    49% {
        background-color: #E2001A;
        border-bottom: 4px solid #E2001A;
    }
    60% {
        background-color: transparent;
        border-bottom: 4px solid transparent;
    }
    99% {
        background-color: transparent;
        border-bottom: 4px solid transparent;
    }
    100% {
        background-color: #E2001A;
        border-bottom: 4px solid #E2001A;
    }
}

@keyframes blinkingForeground {
    0% {
        color: #fff;
    }
    49% {
        color: #fff;
    }
    60% {
        color: #333;
    }
    99% {
        color: #333;
    }
    100% {
        color: #fff;
    }
}

#blockly.debug path.blocklyPath {
    fill-opacity: 0.3;
}

#blockly.debug path.blocklyPath.selectedBreakpoint {
    stroke-opacity: 1;
    transition: none;
    stroke: purple;
    stroke-width: 2px;
}

#blockly.debug path.blocklyPath.breakpoint {
    stroke-opacity: 1;
    transition: none;
    stroke: red;
    stroke-width: 2px;
}

.badge-primary {
    background-color: #F29400;
}

#releaseInfo {
    position: fixed;
    left: 70%;
    right: 8px;
    bottom: 60px;
    z-index: 2999;
    padding: 16px;
    background-color: #FBDE00;
    border: 1px solid #d8d8d8;
}

#releaseInfo > span {
    display: inline-block !important;
    vertical-align: middle;
    padding-right: 16px;
}

#releaseInfo > .no-button {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0 6px;
    font-size: 48px;
}

@media (max-width: 60em), (max-width: 800px) {
    #releaseInfo {
        left: 40%;
    }
}

.port {
    cursor: default !important;
}

#valuesContent .panel-heading {
    background-color: #dddddd;
}

#valuesContent .panel-group {
    margin: 20px 0 0 0;
}

.panel-title > a:before {
    background-size: 10px;
    display: inline-block;
    width: 10px;
    height: 10px;
    content: "";
    margin: 0 12px 0 -8px;
    background-image: url('data:image/svg+xml,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><title>minus</title><path d="M24 14.667h-16c-1.472 0-2.667 1.195-2.667 2.667s1.195 2.667 2.667 2.667h16c1.472 0 2.667-1.195 2.667-2.667s-1.195-2.667-2.667-2.667z"></path> </svg>');
}

.panel-title > a.collapsed:before {
    background-size: 10px;
    display: inline-block;
    width: 10px;
    height: 10px;
    content: "";
    margin: 0 12px 0 -8px;
    background-image: url('data:image/svg+xml,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"> <title>plus</title><path d="M24 13.333h-5.333v-5.333c0-1.472-1.195-2.667-2.667-2.667s-2.667 1.195-2.667 2.667l0.095 5.333h-5.428c-1.472 0-2.667 1.195-2.667 2.667s1.195 2.667 2.667 2.667l5.428-0.095-0.095 5.428c0 1.472 1.195 2.667 2.667 2.667s2.667-1.195 2.667-2.667v-5.428l5.333 0.095c1.472 0 2.667-1.195 2.667-2.667s-1.195-2.667-2.667-2.667z"></path></svg>');
}

.panel-title > a {
    text-decoration: none;
    display: inline-block;
    width: 100%;
    height: 100%;
}

#accordion .panel-body {
    overflow: auto;
    max-height: 50vh;
    border: none;
}

/****************************/
input,
textarea {
    border: 1px solid #eeeeee;
    box-sizing: border-box;
    margin: 0;
    outline: none;
    padding: 10px;
}

input[type="button"] {
    -webkit-appearance: button;
    cursor: pointer;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
}

.input-group {
    clear: both;
    position: relative;
}

.input-group input[type='button'] {
    background-color: #dddddd;
    transition: all 300ms ease;
}
/* ... */

